# rotor-controller

./: BRIEF.md  README.md
controller/: CMakeLists.txt
controller/cmake/: arm-none-eabi.cmake
controller/docs/: state-machine.md
controller/openocd/: tm4c123.cfg
controller/src/: adc.c  adc.h  blocks.c  blocks.h  command.h  config.h  debug.h  display.c  display.h  gpio_outputs.c  gpio_outputs.h  main.c  net.c  net.h  net_persist.c  net_persist.h  protocol.c  protocol.h  startup_gcc.c  state_machine.c  state_machine.h  tick.c  tick.h  tm4c123.ld
hardware/: G5500DC-Cable pinout.txt  HARDWARE BOM.md  HARDWARE implementation notes.md  README  gpio-mapping.txt
middleware/: Makefile  go.mod  go.sum
middleware/cmd/brain/: main.go
middleware/cmd/hamlib/: main.go
middleware/cmd/rotor/: main.go
middleware/cmd/serial/: gs232b.go  gs232b_test.go  main.go  protocol.go
middleware/internal/api/: goto.go  rest.go  server.go  web.go  ws.go
middleware/internal/api/web/: index.html
middleware/internal/calib/: calib.go
middleware/internal/config/: config.go
middleware/internal/fieldunit/: client.go  telemetry.go
middleware/internal/mqtt/: publisher.go
middleware/internal/state/: state.go
middleware/internal/tracker/: tracker.go
middleware/internal/wire/: protocol.go
test/host_tests/: CMakeLists.txt  test_protocol.c  test_state_machine.c
